[tool.poetry]
name = "rca-competitor-analysis"
version = "1.0.0"
description = "Rate Comparison Analysis tool for self-storage facilities"
authors = ["Revenue Management Team"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pandas = "^2.1.3"
pyodbc = "^5.0.1"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
